# AnkiMaps

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  LICENSE.txt  README.md  __init__.py  deploy.py  package.py  publish_ankiweb.py  pyproject.toml
.github/workflows/: release.yml
assets/packaging/: AnkiMaps_Welcome_Deck.apkg
src/: __init__.py
src/common/: constants.py  io.py  quadtree.py  utils.py  warnings.py
src/controller/: addon_upgrade_controller.py  history_commands.py  history_manager.py  landing_page_controller.py  mindmap_controller.py
src/model/: connections.py  mindmap.py  node.py
src/repository/: __init__.py  addon_upgrade_repository.py  anki_repository.py  mindmap_files_repository.py
src/repository/db/: __init__.py  schema.py  sql_code_generator.py  sql_repository.py
src/view/: landing_page.py  line_type_selector.py  log_viewer.py  mindmap_view.py  mindmap_window.py
src/view/assets/: landing_page.qss
src/view/edges/: edges.py
src/view/items/: center_point.py  coordinate_grid.py
src/view/nodes/: notes.py  states.py
